WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173402
WebKit does not honor closed caption stroke width.
https://bugs.webkit.org/show_bug.cgi?id=173402
Summary
WebKit does not honor closed caption stroke width.
Per Arne Vollan
Reported
2017-06-15 00:32:21 PDT
WebKit currently has an upper limit on the stroke width returned from MACaptionAppearanceCopyFontDescriptorWithStrokeForStyle. Also, the stroke width is currently calculated based on the font size in pixels, it should be calculated based on the font size in points.
Attachments
Patch
(4.89 KB, patch)
2017-06-15 00:36 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(5.34 KB, patch)
2017-06-15 02:10 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(3.23 KB, patch)
2017-06-15 06:30 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(2.75 KB, patch)
2017-06-16 03:43 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(3.15 KB, patch)
2017-06-16 04:18 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2017-06-15 00:36:09 PDT
Created
attachment 312957
[details]
Patch
Per Arne Vollan
Comment 2
2017-06-15 02:10:54 PDT
Created
attachment 312964
[details]
Patch
Per Arne Vollan
Comment 3
2017-06-15 02:11:38 PDT
rdar://problem/32761276
Per Arne Vollan
Comment 4
2017-06-15 06:30:49 PDT
Created
attachment 312975
[details]
Patch
Per Arne Vollan
Comment 5
2017-06-16 03:43:47 PDT
Created
attachment 313068
[details]
Patch
Per Arne Vollan
Comment 6
2017-06-16 04:18:24 PDT
Created
attachment 313069
[details]
Patch
Per Arne Vollan
Comment 7
2017-06-16 06:45:01 PDT
Comment on
attachment 313069
[details]
Patch Thanks for reviewing, Eric!
WebKit Commit Bot
Comment 8
2017-06-16 07:17:02 PDT
Comment on
attachment 313069
[details]
Patch Clearing flags on attachment: 313069 Committed
r218388
: <
http://trac.webkit.org/changeset/218388
>
WebKit Commit Bot
Comment 9
2017-06-16 07:17:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug