WebKit does not honor closed caption stroke width. https://bugs.webkit.org/show_bug.cgi?id=173402

Reviewed by Eric Carlson.

WebKit currently has an upper limit on the stroke width returned from MACaptionAppearanceCopyFontDescriptorWithStrokeForStyle.
Since only half the stroke is visible because the stroke is drawn before the fill, double the stroke width from
MediaAccessibility to get the correct visual stroke width. Also, the stroke width returned from this function should not be
interpreted as CSS points, but as CSS pixels.

* html/shadow/MediaControlElements.cpp:
(WebCore::MediaControlTextTrackContainerElement::updateTextStrokeStyle):
* page/CaptionUserPreferencesMediaAF.cpp:
(WebCore::CaptionUserPreferencesMediaAF::captionStrokeWidthForFont):


Canonical link: https://commits.webkit.org/190339@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218388 268f45cc-cd09-0410-ab3c-d52691b4dbfc